# yandex_praktikum_algo

./: .gitignore  README.md  pyproject.toml
sprint_0/: moving_average.py
sprint_1/: 1.function_results.py  binary_system.py  chaos_weather.py  degree_of_four.py  eratosthenes.py  even_odd_numbers.py  factorization.py  function_results.py  most_longer_word.py  neighbors.py  palindrom.py  work_from_home.py
sprint_1/final_project_sprint_1/: nearest_null.py  sleight_of_hand.py  test_nearest_null.py  test_sleight_of_hand.py
sprint_2/: all_reverse.py  correct_brackt.py  delete_random_thing.py  list_of_things.py  mother.py  stack_max.py
sprint_2/final_project_sprint_2/: calculator.md  calculator.py  deque.md  deque.py  test_calculator.py  test_deque.py
sprint_3/: buble_sort.py  combinations.py  conferences.py  flower_fields.py  garderob.py  gen_brackets.py  get_biggest.py  subsequences.py  task_merge_sort.py  two_bikes.py
sprint_3/final_project_sprint_3/: broken_massive.py  effective_quicksort.py  test_broken_massive.py  test_effective_quicksort.py
sprint_3/theory/: counting_sort.py  gen_binary.py  insertion_sort.py  merge_sort.py
sprint_4/: competition.py  d_polynominal_hash.py  hobbies.py  strange_compat.py
sprint_4/final_project/: hash_table.py  search_engine.py  test_search_engine.py
sprint_4/theory/: three_sum.py
sprint_5/: balanced_tree.py  lighter.py  print_range.py
sprint_5/examples/: avl_tree.py  binary_tree_cicle.py  binary_tree_rec.py  delete_node_tree_v1.py  heap.py  heap_yandex.py  heapsort_gpt.py  heapsort_sourcery.py  heapsort_sourcery_v2.py  heapsort_v1.py  insert_node.py  print_tree.py
sprint_5/final_project_sprint_5/: delete_node.py  heapsort.py  test_heapsort_user.py
sprint_6/: adjacency_list.py  adjacency_matrix.py
sprint_7/: stock.py
(+18 files in other folders)
