[tool.poetry]
name = "yandex-praktikum-algo"
version = "0.1.0"
description = ""
authors = ["VladMerk <merkvladimir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest-timeout = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "-ra -q -p no:cacheprovider --timeout=1"
timeout = 1
