[tool.poetry]
name = "yandex-praktikum-algo"
version = "0.1.0"
description = ""
authors = ["VladMerk <merkvladimir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest-timeout = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
ipykernel = "^6.29.4"
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
extend-ignore = "W291 E128 E122"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = "-ra -q -p no:cacheprovider"
